# Cpp-Chess

./: CMakeLists.txt  README.md
src/: main.cpp
src/board/: BoardManager.cpp  BoardManager.h  Display.cpp  Display.h  Square.cpp  Square.h
src/misc/: Color.h  Pair.h
src/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  MoveUpdater.cpp  MoveUpdater.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/player/: Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h
